--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,8 @@
     ],
 
     "require": {
-        "php": ">=5.3.2",
-        "twig/twig": ">=1.4"
+        "php": "^7.3|^8.0",
+        "twig/twig": ">=3.2"
     },
 
     "recommend": {
